ambassador/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  tls:
    - hosts:
        - premierpredictor.uk
      secretName: ambassador-certs
  rules:
    - host: premierpredictor.uk
      http:
        paths:
          - path: /fixture/
            backend:
              serviceName: fixtureservice-service
              servicePort: 8086
          - path: /
            backend:
              serviceName: gatewayservice-service
              servicePort: 4000
          - path: /auth/
            backend:
              serviceName: kauthservice-service
              servicePort: 8080
          - path: /league/
            backend:
              serviceName: leagueservice-service
              servicePort: 8089
          - path: /live/
            backend:
              serviceName: livematchservice-service
              servicePort: 8088
          - path: /prediction/
            backend:
              serviceName: predictionservice-service
              servicePort: 8087
          - path: /user/
            backend:
              serviceName: userservice-service
              servicePort: 8085
